overflow fix

--- a/src/components/cards/cards.css
+++ b/src/components/cards/cards.css
@@ -49,3 +49,9 @@
   border-radius: 5px;
   border: 1px solid #ccc;
 }
+
+@media (max-width: 640px) {
+  .card {
+    height: 170px;
+  }
+}
